# multiprocesing

./: README.md  app.py  main.py  orquestador.py  pyproject.toml  temp.jl
